--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ Telangana's most trusted Vehicle Registration consultancy.
                     <div class="col-md-12">
                         <div class="card ">
                             <label for="zip-code">RTO LOCATION</label>
-                            <input id="zip-code" name="zipcode" type="text" placeholder="Vehicle Location" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Vehicle Location&#39;" value="" maxlength="5" required="" tabindex="3" aria-required="true">
+                            <input id="zip-code" name="zipcode" type="text" placeholder="RTO Location" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Vehicle Location&#39;" value="" maxlength="5" required="" tabindex="3" aria-required="true">
                         </div>
                                             </div>
 
