--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ Telangana's most trusted Vehicle Registration consultancy.
     <div class="container text-center">
         <div class="avoid-dmv-penalties mb-5">Avoid DMV Penalties</div>
         <div class="row">
-            <div class="col mb-4"><div class="text-on-blue">Complete your registration with us. A one stop solution to your car registraion.</div></div>
+            <div class="col mb-4"><div class="text-on-blue">Complete your registration with us.xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx A one stop solution to your car registraion.</div></div>
         </div>
         <div class="row">
             <div class="col"><a class="btn btn-primary btn-white">Get Started</a></div>
