--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         <title>Car Registration</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="description" content="California&#39;s most trusted Vehicle Registration Service | Licensed by the California DMV">
+    <meta name="description" content="Telangana&#39;s most trusted Vehicle Registration Consultancy">
 
     <meta property="og:title" content="Car Registration">
-    <meta property="og:description" content="California&#39;s most trusted Vehicle Registration Service | Licensed by the California DMV">
+    <meta property="og:description" content="Telangana&#39;s most favourite Vehicle Registration Consultancy">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Car Registration">
-    <meta name="twitter:description" content="California&#39;s most trusted Vehicle Registration Service | Licensed by the California DMV">
+    <meta name="twitter:description" content="Telangana&#39;s most favourite Vehicle Registration Consultancy">
 
     <meta name="msapplication-TileColor" content="#ffffff">
 
@@ -58,8 +58,8 @@
     <div class="container">
 
         <nav class="navbar navbar-expand-md navbar-light bg-white align-items-center px-md-0">
-            <a class="navbar-brand navbar-brand--large" href="https://www.carregistration.com/"><img src="./Car Registration_files/CarRegistration-large.svg" class="d-inline-block" alt="Car Registration Logo"><div class="tagline d-none d-md-block">EaseMyRegistration.com
-Telangana's most trusted Vehicle Registration consultancy. 
+            <a class="navbar-brand navbar-brand--large" href="https://www.carregistration.com/"><img src="./Car Registration_files/CarRegistration-large.svg" class="d-inline-block" alt="Car Registration Logo"><div class="tagline d-none d-md-block">
+Telangana's most favourite Vehicle Registration consultancy. 
 </div></a>
             <a class="navbar-brand navbar-brand--small" href="https://www.carregistration.com/"><img src="./Car Registration_files/CarRegistration-small.svg" class="d-inline-block" alt="Car Registration Logo" height="41"></a>
             <button class="navbar-toggler d-sm-block d-md-none" type="button" data-toggle="collapse" data-target="#mobile-navigation" aria-expanded="false" aria-label="Toggle navigation">
