--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@ Telangana's most favourite Vehicle Registration consultancy
                         <a class="nav-link dropdown-toggle" href="https://www.carregistration.com/dmv-services" id="navbarDropdownMenuLink" aria-haspopup="true" aria-expanded="false">
                             Services
                         </a>
+                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="https://www.carregistration.com/registration">Permanent Registration</a>
+
+                        </div>
                     </li>
                     
                     <li class="nav-item dropdown ">
