--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="container">
 
         <nav class="navbar navbar-expand-md navbar-light bg-white align-items-center px-md-0">
-            <a class="navbar-brand navbar-brand--large" href="https://www.carregistration.com/"><img src="./Car Registration_files/CarRegistration-large.svg" class="d-inline-block" alt="Car Registration Logo"><div class="tagline d-none d-md-block">
+            <a class="navbar-brand navbar-brand--large" href="https://www.carregistration.com/"><img src="./Car Registration_files/logo.png" class="d-inline-block" alt="Car Registration Logo"><div class="tagline d-none d-md-block">
 Telangana's most favourite Vehicle Registration consultancy
 </div></a>
             <a class="navbar-brand navbar-brand--small" href="https://www.carregistration.com/"><img src="./Car Registration_files/CarRegistration-small.svg" class="d-inline-block" alt="Car Registration Logo" height="41"></a>
