--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				type:"post",
 				data:$("#plate-lookup1").serializeArray(),
 				success: function(){
-					alert("Form Data Submitted :)")
+					alert("Thank You for choosing EaseMyRegustration.Com  for the permanentregistration of your car. We will reach out to you soon.)")
 				},
 				error: function(){
 					alert("There was an error :(")
