--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ Telangana's most favourite Vehicle Registration consultancy
         <div class="row justify-content-between">
             <div class="col-lg-9">
                 <div class="footer-description">
-                    EaseMyRegistration.com is owned and operated by Dream India, Inc. Please note: Dream India, Inc. is not owned or operated by any government agency, and is not  having any relation with Telangana’s RTO. (Regional Transport Office)
+                    EaseMyRegistration.com is owned and operated by Dream India, Inc. Please note: EaseMyRegistration.Com is not owned or operated by any government agency, and is not  having any relation with Telangana’s RTO. (Regional Transport Office)
                 </div>
                 <div class="row seals justify-content-md-center d-none">
                     <div class="col-8 col-md-6 col-lg-8">
