--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ Telangana's most favourite Vehicle Registration consultancy
     <div class="row justify-content-center">
         <div class="col col-lg-18 text-center">
             <div class="testimonial-text">"Just wanted to say a big thanks to the whole Careg company for helping me out. They went above and beyond with their service and were very polite and positive throughout the whole process! Thank you again!"</div>
-            <div class="testimonial-author">– Erica</div>
+            <div class="testimonial-author">– Srinivas</div>
         </div>
     </div>
 </div>
