--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
     <div class="container">
 
         <nav class="navbar navbar-expand-md navbar-light bg-white align-items-center px-md-0">
-            <a class="navbar-brand navbar-brand--large"><img src="./Car Registration_files/logo.png" class="d-inline-block" alt="Car Registration Logo"></a><div class="tagline d-none d-md-block">
+            <a class="navbar-brand navbar-brand--large"><img src="./Car Registration_files/download.svg" class="d-inline-block" alt="Car Registration Logo"></a><div class="tagline d-none d-md-block">
 Telangana's most favourite Vehicle Registration consultancy
 </div>
-            <a class="navbar-brand navbar-brand--small"><img src="./Car Registration_files/logo.png" class="d-inline-block" alt="Car Registration Logo" width="151"></a>
+            <a class="navbar-brand navbar-brand--small"><img src="./Car Registration_files/download.svg" class="d-inline-block" alt="Car Registration Logo" width="151"></a>
             <button class="navbar-toggler d-sm-block d-md-none" type="button" data-toggle="collapse" data-target="#mobile-navigation" aria-expanded="false" aria-label="Toggle navigation">
                 <span></span>
             </button>
