--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
         <nav class="navbar navbar-expand-md navbar-light bg-white align-items-center px-md-0">
             <a class="navbar-brand navbar-brand--large"><img src="./Car Registration_files/download.svg" class="d-inline-block" alt="Car Registration Logo"></a><div class="tagline d-none d-md-block">
 Telangana's most favourite Vehicle Registration consultancy
+	  <button class="navbar-toggler d-sm-block d-md-none" type="button" data-toggle="collapse" data-target="#mobile-navigation" aria-expanded="false" aria-label="Toggle navigation">
+                <span></span>
+            </button>
+
 </div>
             <a class="navbar-brand navbar-brand--small"><img src="./Car Registration_files/download.svg" class="d-inline-block" alt="Car Registration Logo" width="151"></a>
             <button class="navbar-toggler d-sm-block d-md-none" type="button" data-toggle="collapse" data-target="#mobile-navigation" aria-expanded="false" aria-label="Toggle navigation">
