--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <header id="header" class="fixed-top">
     <div class="container">
 
-        <nav class="navbar navbar-expand-md navbar-light bg-white align-items-side px-md-0">
+        <nav class="navbar navbar-expand-md navbar-light bg-white align-items-centre px-md-0">
             <a class="navbar-brand navbar-brand--large"><img src="./Car Registration_files/download.svg" class="d-inline-block" alt="Car Registration Logo"></a><div class="tagline d-none d-md-block">
 Telangana's most favourite Vehicle Registration consultancy
 	  <button class="navbar-toggler d-sm-block d-md-none" type="button" data-toggle="collapse" data-target="#mobile-navigation" aria-expanded="false" aria-label="Toggle navigation">
