--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@ Telangana's most favourite Vehicle Registration consultancy
                 </div>
             </div>
             <div class="row">
-                <div class="col text-center mb-15">
-                    <div class="blue-title pb-1">Start Your Quick Vehicle Registration</div>
+                <div class="col text-center mb-4">
+                    <div class="blue-title pb-10">Start Your Quick Vehicle Registration</div>
                  <!--   <span style="color: #3887b4;"> Telangana's Most Favourite Vehicle Registration Consultancy.</span> -->
                 </div>
             </div>
@@ -205,7 +205,7 @@ Telangana's most favourite Vehicle Registration consultancy
                 
                 
                 <div class="row fields justify-content-md-center d-block d-sm-none">
-                       <div class="col-md-24 mb-0">
+                   <!--    <div class="col-md-24 mb-0">-->
                             <div class="card ">
                                 <label for="license-not">NAME</label>
                                 <input id="license-not" name="plate" type="text" placeholder="######" value=""  required="" tabindex="1" aria-required="true">
