--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ Telangana's most favourite Vehicle Registration consultancy
                 
                 
                 <div class="row fields justify-content-md-center d-block d-sm-none">
-                    <div class="col-md-1200 mb-2000">
+                    <div class="col-md-12000">
                             <div class="card ">
                                 <label for="license-not">NAME</label>
                                 <input id="license-not" name="plate" type="text" placeholder="######" value=""  required="" tabindex="1" aria-required="true">
