--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ Telangana's most favourite Vehicle Registration consultancy
             <div class="row">
                 <div class="col text-center mb-4">
                     <div class="blue-title pb-1">Start Your Quick Vehicle Registration</div>
-                 <!--   <span style="color: #3887b4;"> Telangana's Most Favourite Vehicle Registration Consultancy.</span> -->
+                 <span style="color: #3887b4;"> Telangana's Most Favourite Vehicle Registration Consultancy.</span>
                 </div>
             </div>
                         <form id="plate-lookup1" onsubmit="return false">
