--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@ Telangana's most favourite Vehicle Registration consultancy
                 </div>
             </div>
             <div class="row">
-                <div class="col text-center mb-4">
-                    <div class="blue-title pb-1">Start Your Quick Vehicle Registration</div>
+                <div class="col text-center mb-40">
+                    <div class="blue-title pb-100">Start Your Quick Vehicle Registration</div>
                  <span style="color: #3887b4;"> Telangana's Most Favourite Vehicle Registration Consultancy.</span>
                 </div>
             </div>
@@ -595,11 +595,11 @@ Telangana's most favourite Vehicle Registration consultancy
       min-width: 500px;
   }
 
-	/*.blue.blue--dark {
+  .blue.blue--dark {
       background-image: url(https://rg-clients.s3.amazonaws.com/careg/female-driving.jpeg);
-      background-size: cover;-->
+      background-size: cover;
   }
-*/
+
   .blue.blue--home {
       height: unset;
   }
