--- a/index.html
+++ b/index.html
@@ -595,10 +595,10 @@ Telangana's most favourite Vehicle Registration consultancy
       min-width: 500px;
   }
 
-  .blue.blue--dark {
+  .blue.blue--dark /*{
       background-image: url(https://rg-clients.s3.amazonaws.com/careg/female-driving.jpeg);
       background-size: cover;
-  }
+  }*/
 
   .blue.blue--home {
       height: unset;
