--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@ Telangana's most favourite Vehicle Registration consultancy
       min-width: 500px;
   }
 
-  .blue.blue--dark /*{
+ /* .blue.blue--dark 9{
       background-image: url(https://rg-clients.s3.amazonaws.com/careg/female-driving.jpeg);
       background-size: cover;
   }*/
