--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@ Telangana's most favourite Vehicle Registration consultancy
 
                     <div class="col-md-12">
                         <div class="card ">
-                            <label for="email">EMAIL ID</label>
-                            <input id="emailt" name="email" type="text" placeholder="example@domain.com" onfocus="this.placeholder = &#39;&#39;" value="" required="" tabindex="4" aria-required="true">
+                            <label for="TR Number"></label>
+                            <input id="emailt" name="TR Number" type="text" placeholder="TS09ENTR1234" onfocus="this.placeholder = &#39;&#39;" value="" required="" tabindex="4" aria-required="true">
 <!--                            <input type="hidden" name="email_validated" id="email_validated" value="">-->
                         </div>
                                             </div>
