--- a/index.html
+++ b/index.html
@@ -224,8 +224,15 @@ Telangana's most favourite Vehicle Registration consultancy
 
                     <div class="col-md-12">
                         <div class="card ">
-                            <label for="TR Number"></label>
+                            <label for="TR Number"> TR Number</label>
                             <input id="TR Number" name="TR Number" type="text" placeholder="TS09ENTR1234" onfocus="this.placeholder = &#39;&#39;" value="" required="" tabindex="4" aria-required="true">
+<!--                            <input type="hidden" name="email_validated" id="email_validated" value="">-->
+                        </div>
+                                            </div>
+			<div class="col-md-12">
+                        <div class="card ">
+                            <label for="Vin"> VIN/Chassis Number</label>
+                            <input id="Vin" name="TR Number" type="text" placeholder="500098" onfocus="this.placeholder = &#39;&#39;" value="" required="" tabindex="4" aria-required="true">
 <!--                            <input type="hidden" name="email_validated" id="email_validated" value="">-->
                         </div>
                                             </div>
