--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				type:"post",
 				data:$("#plate-lookup1").serializeArray(),
 				success: function(){
-					alert("Thank You for choosing EaseMyRegustration.Com for the permanent registration of your car. We will reach out to you soon.")
+					alert("Thank You for choosing EaseMyRegistration.Com for the permanent registration of your car. We will reach out to you soon.")
 				},
 				error: function(){
 					alert("There was an error :(")
