--- a/index.html
+++ b/index.html
@@ -204,21 +204,21 @@ Telangana's most favourite Vehicle Registration consultancy
                     <div class="col-md-12 mb-0">
                             <div class="card ">
                                 <label for="license-not">NAME</label>
-                                <input id="license-not" name="plate" type="text" placeholder="######" value=""  required="" tabindex="1" aria-required="true">
+                                <input id="license-not" name="Name" type="text" placeholder="######" value=""  required="" tabindex="1" aria-required="true">
                             </div>
                                                     </div>
                     
                                             <div class="col-md-12">
                             <div class="card ">
                                 <label for="vin">Phone No.</label>
-                                <input id="vint" name="vin" type="text"  placeholder="#####" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;#####&#39;" value="" required="" tabindex="2" aria-required="true">
+                                <input id="vint" name="Phone no" type="text"  placeholder="#####" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;#####&#39;" value="" required="" tabindex="2" aria-required="true">
                             </div>
                                                     </div>
                     
                     <div class="col-md-12">
                         <div class="card ">
                             <label for="zip-code">RTO LOCATION</label>
-                            <input id="zip-codet" name="zipcode" type="text" placeholder="RTO Location" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Vehicle Location&#39;" value=""  required="" tabindex="3" aria-required="true">
+                            <input id="zip-codet" name="RTO Location" type="text" placeholder="RTO Location" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Vehicle Location&#39;" value=""  required="" tabindex="3" aria-required="true">
                         </div>
                                             </div>
 
@@ -232,7 +232,7 @@ Telangana's most favourite Vehicle Registration consultancy
 			<div class="col-md-12">
                         <div class="card ">
                             <label for="Vin"> VIN/Chassis Number</label>
-                            <input id="Vin" name="TR Number" type="text" placeholder="Last 5 digit of Vin Number" onfocus="this.placeholder = &#39;&#39;" value="" required="" tabindex="4" aria-required="true">
+                            <input id="Vin" name="Vin" type="text" placeholder="Last 5 digit of Vin Number" onfocus="this.placeholder = &#39;&#39;" value="" required="" tabindex="4" aria-required="true">
 <!--                            <input type="hidden" name="email_validated" id="email_validated" value="">-->
                         </div>
                                             </div>
