--- a/index.html
+++ b/index.html
@@ -203,21 +203,21 @@ Telangana's most favourite Vehicle Registration consultancy
                 <div class="row fields justify-content-md-center d-block">
                     <div class="col-md-12 mb-0">
                             <div class="card ">
-                                <label for="license-not">NAME</label>
+                                <label for="Name">NAME</label>
                                 <input id="license-not" name="Name" type="text" placeholder="######" value=""  required="" tabindex="1" aria-required="true">
                             </div>
                                                     </div>
                     
                                             <div class="col-md-12">
                             <div class="card ">
-                                <label for="vin">Phone No.</label>
+                                <label for="Phone no">Phone No.</label>
                                 <input id="vint" name="Phone no" type="text"  placeholder="#####" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;#####&#39;" value="" required="" tabindex="2" aria-required="true">
                             </div>
                                                     </div>
                     
                     <div class="col-md-12">
                         <div class="card ">
-                            <label for="zip-code">RTO LOCATION</label>
+                            <label for="RTO Location">RTO LOCATION</label>
                             <input id="zip-codet" name="RTO Location" type="text" placeholder="RTO Location" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Vehicle Location&#39;" value=""  required="" tabindex="3" aria-required="true">
                         </div>
                                             </div>
