--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ Telangana's most favourite Vehicle Registration consultancy
             <div class="step-title wow fadeIn" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeIn;">Enter Your Details</div>
             <div class="step-image wow fadeInUp" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;"><img src="./Car Registration_files/step02.svg" alt="Enter Vehicle Info"></div>
             <div class="step-description wow fadeIn" data-wow-delay="0.8s" style="visibility: hidden; animation-delay: 0.8s; animation-name: none;">
-                Enter your Name, Phone No, Email-ID along with the RTO location mentioned in the TR.
+                Enter your Name, Phone No, RTO Location along with TR Number and last 5 digits of the VIN Number.
             </div>
         </div>
 	    
