--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ Telangana's most favourite Vehicle Registration consultancy
             <div class="step-title wow fadeIn" data-wow-delay="1.2s" style="visibility: visible; animation-delay: 1.2s; animation-name: fadeIn;">And You're Done!</div>
             <div class="step-image wow fadeInRight" data-wow-delay="1s" style="visibility: visible; animation-delay: 1s; animation-name: fadeInRight;"><img src="./Car Registration_files/step04.svg" alt="And You&#39;re Done!"></div>
             <div class="step-description wow fadeIn" data-wow-delay="1.2s" style="visibility: hidden; animation-delay: 1.2s; animation-name: none;">
-                 You’re all done! Your registration companion will help you out in the entire process and will make sure that you can go on with your day having not wasted time in line.
+                 You’re all done! You need to make a payment of INR 3000 RS. Your registration companion will help you out in the entire process and will make sure that you can go on with your day having not wasted time in line.
             </div>
         </div>
     </div>
