--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Telangana's most favourite Vehicle Registration consultancy
             </button>
 
 </div>
-            <a class="navbar-brand navbar-brand--small"><img src="./Car Registration_files/download.svg" class="d-inline-block" alt="Car Registration Logo" width="151"></a>
+            <a class="navbar-brand navbar-brand--small"><img src="./Car Registration_files/ease1.png" class="d-inline-block" alt="Car Registration Logo" width="151"></a>
             <button class="navbar-toggler d-sm-block d-md-none" type="button" data-toggle="collapse" data-target="#mobile-navigation" aria-expanded="false" aria-label="Toggle navigation">
                 <span></span>
             </button>
