--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         
         <div class="avoid-dmv-penalties mb-5">Avoid Any Penalties</div>
         <div class="row">
-            <div class="col mb-4"><div class="text-on-blue">Complete your registration with us. A one stop solution to your car registraion.</div></div>
+            <div class="col mb-4"><div class="text-on-blue">Complete your registration with us with just Rs 3000. A one stop solution to your car registraion.</div></div>
         </div>
         <div class="row">
             <div class="col"><a class="btn btn-primary btn-white">Get Started</a></div>
