--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                             gtag('event', 'page_view', { 'send_to': 'UA-82277543-1' });
                     </script>
     
-    
+    <script data-ad-client="ca-pub-7249557821577719" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <title>Car Registration</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
