--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	<section id="intro" class="bg-image" style="background-image: url('assets/car_pic3.jpg'); width: 100%">
 			<div class="container">
 				<div class="row align-items-center">
-					<div class="col-10 col-md-8 col-lg-6 col-xl-5 m-5 text-start bg-light shadow-lg rounded">
+					<div class="col-10 col-md-8 col-lg-6 col-xl-5 m-5 text-start bg-light shadow-lg rounded justify-content-center justify-content-lg-start">
 						<h1 class="text-center text-md-start" style="color: #481449;">
 							Start Your Quick Vehicle Registration
 						</h1>
