--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 	<!-- Nav Bar -->
 	<nav class="navbar fixed-top bg-body navbar-expand-md navbar-light">
 		<div class="container">
-			<a href="#intro" class="navbar-brand">
-				<img class="img-fluid" src="assets/ease1.png" alt="logo image" width="250vh">
+			<a href="#intro" class="navbar-brand" style="width: 65%; max-width:250vh;">
+				<img class="img-fluid" src="assets/ease1.png" alt="logo image">
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -58,8 +58,8 @@
 	<!-- Landing Form -->
 	<section id="intro" class="bg-image" style="background-image: url('assets/car_pic3.jpg'); width: 100%">
 			<div class="container">
-				<div class="row align-items-center">
-					<div class="col-10 col-md-8 col-lg-6 col-xl-5 m-5 text-start bg-light shadow-lg rounded justify-content-center justify-content-lg-start">
+				<div class="row align-items-center justify-content-center justify-content-lg-start">
+					<div class="col-10 col-md-8 col-lg-6 col-xl-5 my-5 text-start bg-light shadow-lg rounded">
 						<h1 class="text-center text-md-start" style="color: #481449;">
 							Start Your Quick Vehicle Registration
 						</h1>
