--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 					<p>
                         "You went beyond what I expected so THANK YOU!"
                     </p>
-                    <p class="text-muted fst-italic">– Surendra</p>
+                    <p class="text-muted fst-italic">- Surendra</p>
 				</div>
 
 			</div>
@@ -246,7 +246,7 @@
 					<p>
                         "Thank you so much! It was worth the extra money. I appreciate you and your staff, very professional."
                     </p>
-                    <p class="text-muted fst-italic">– Ashwani</p>
+                    <p class="text-muted fst-italic">- Ashwani</p>
 				</div>
 
 			</div>
@@ -263,7 +263,7 @@
 					<p>
                         "Just wanted to say a big thanks to the whole Careg company for helping me out. They went above and beyond with their service and were very polite and positive throughout the whole process! Thank you again!"
                     </p>
-                    <p class="text-muted fst-italic">– Srinivas</p>
+                    <p class="text-muted fst-italic">- Srinivas</p>
 				</div>
 
 			</div>
