--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 			<div class="text-center">
 				<h2 style="color: #481449;">Avoid Any Penalties <i class="bi bi-emoji-sunglasses" style="color: #ac2bac;"></i></h2>
 
-				<p class="lead text-muted">Complete your registration with us at just 3000 INR. A one stop solution to your car registration</p>
+				<p class="lead text-muted"> Sorry! But it's true that you cannot claim the insurance if your car is not registered. So don't procrastinate it because incidents can happen with anyone at any time. </p>
 			</div>
 
 			<div class="row my-5 justify-content-center">
@@ -169,7 +169,7 @@
 						<img src="assets/done.jpg" class="card-img-top" alt="Enter Details">
 						<div class="card-body text-center py-4">
 							<h4 class="card-title" style="color: #481449;">And You're Done!</h4>
-							<p class="lead card-subtitle">You’re all done! You need to make a payment of 3000 INR. Your registration companion will help you out in the entire process and will make sure that you can go on with your day having not wasted time in line</p>
+							<p class="lead card-subtitle">You’re all done! Visit the RTA with all the required documents. Your registration companion will help you out in the entire process and will make sure that you can go on with your day having not wasted time in line</p>
 						</div>
 					</div>
 				</div>
