--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 			<div class="row my-5 align-items-center justify-content-center">
 				<div class="col-11 col-md-8 text-center">
 					<h2 style="color: #481449;"><i class="bi bi-people-fill" style="color: #ac2bac;"></i> About Us</h2>
-					<p class="lead">EaseMyRegistration.com is owned and operated by Dream India, Inc. Please note: EaseMyRegistration.Com is not owned or operated by any government agency, and is not having any relation with Telangana’s RTO(Regional Transport Office)</p>
+					<p class="lead">EaseMyRegistration.com is owned and operated by Dream India, Inc. Please note: EaseMyRegistration.Com is not owned or operated by any government agency, and is not having any relation with Telangana’s RTO(Regional Transport Office).Also the consultancy we provide is strictly subjeced to each and every norm of RTO.</p>
 				</div>
 			</div>
 
