--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 								<span class="input-group-text">
 									<i class="bi bi-hash" style="color: #ac2bac;"></i>
 								</span>
-								<input type="text" class="form-control" id="vcnumber" name="Assistance required for" placeholder="lICENCE, PERMIT, TRANSFER">
-							</div>   -->
+								<input type="text" class="form-control" id="vcnumber" name="Assistance required for" placeholder="Driving Licence, Permit, Registration,">
+							</div>   
 							
 							
 
