--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 							</div>   -->
 							
 							
-							<label for="location" class="form-label">Assistance required for:</label>
+							<label for="Assistance required for" class="form-label">Assistance required for:</label>
 							<div class="mb-4 input-group">
 								<span class="input-group-text">
 									<i class="bi bi-geo-alt-fill" style="color: #ac2bac;"></i>
