--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 	</section>
 
 	<!-- Services -->
-	<!--<section id="services" class="bg-light">
+	<section id="services" class="bg-light">
 		<div class="container">
 			<div class="text-center">
 				<h2 style="color: #481449;">Avoid Any Penalties <i class="bi bi-emoji-sunglasses" style="color: #ac2bac;"></i></h2>
@@ -192,7 +192,7 @@
 
 			</div>
 		</div>
-	</section> -->
+	</section> 
 
 	<!-- Reviews -->
 	<section id="reviews">
