--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<div class="row align-items-center justify-content-center justify-content-lg-start">
 					<div class="col-10 col-md-8 col-lg-6 col-xl-5 my-5 mx-lg-5 text-start bg-light shadow-lg rounded">
 						<h1 class="text-center text-md-start" style="color: #481449;">
-							There is only 1 step
+							Start your Quick Vehicle Registration
 						</h1>
 						<form id="quick_form" onsubmit="return false">
 							<label for="name" class="form-label">Name:</label>
