--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 				</div>
 			</div>
 
-			<div class="row my-5 align-items-center justify-content-center">
+		<!--	<div class="row my-5 align-items-center justify-content-center">
 				<hr class="col-8 col-md-5 mb-5 bg-danger border-1 border-top border-danger">
 				<h5 class="text-center" style="color: #481449;"><i class="bi bi-telephone-fill" style="color: #ac2bac;"></i> Contacts</h5>
 				<div class="col-5 col-md-4 text-end">
@@ -306,7 +306,7 @@
 				<div class="col-5 col-md-4 text-start">
 					<p class="lead">8769252451</p>
 				</div>
-			</div>
+			</div> -->
 
 		</div>
 	</section>
