--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 						<i class="bi bi-star-fill text-warning"></i>
 					</div>
 					<p>
-                        "Trying to get help as a disabled person is nearly impossible, and your efforts to see this through asap means peace of mind"
+                        "Thank you so much for your assistance"
                     </p>
                     <p class="text-muted fst-italic">- Rajshekhar</p>
 				</div>
@@ -246,7 +246,7 @@
 						<i class="bi bi-star text-warning"></i>
 					</div>
 					<p>
-                        "TRUST me...it has been MY pleasure. Thank you very much for your assistance"
+                        "Very nice and professional staff"
                     </p>
                     <p class="text-muted fst-italic">- RK Sharma</p>
 				</div>
@@ -260,7 +260,7 @@
 						<i class="bi bi-star-half text-warning"></i>
 					</div>
 					<p>
-                        "Thank you so much! It was worth the extra money. I appreciate you and your staff, very professional."
+                        "Thank you! It was worth the extra money. I appreciate you and your staff, very professional."
                     </p>
                     <p class="text-muted fst-italic">- Ashwani</p>
 				</div>
