--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
 			</div>
 
-			<div class="row align-items-center justify-content-center">
+			<div class="row justify-content-center">
 				<div class="col-11 col-md-5 col-lg-4 border border-1 m-2 bg-light shadow">
 					<div class="pb-2">
 						<i class="bi bi-star-fill text-warning"></i>
