--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<a class="nav-link" href="#reviews">Reviews</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#aboutus">About Us & Contacts</a>
+						<a class="nav-link" href="#aboutus">About Us</a>
 					</li>
 				</ul>
 			</div>
