--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 			<div class="row align-items-center justify-content-center">
 				<div class="col-md-8 col-lg-6 text-center">
 					<h2 style="color: #481449;"><i class="bi bi-stars" style="color: #ac2bac;"></i> People Love Us</h2>
-					<p class="lead text-muted">See what our customers are saying about EaseMyRegistration.com</p>
+					<p class="lead text-muted">See what our customers are saying about EaseMyRegistration</p>
 				</div>
 			</div>
 
