--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 			<div class="text-center">
 				<h2 style="color: #481449;">Avoid Any Penalties <i class="bi bi-emoji-sunglasses" style="color: #ac2bac;"></i></h2>
 
-				<p class="lead text-muted"> Sorry! But it's true that you cannot claim the insurance if your car is not registered. So don't procrastinate it because incidents can happen with anyone at any time. </p>
+				<p class="lead text-muted"> Sorry! But it's true, you cannot claim insurance if your car is not registered. Don't procrastinate permanent registration, incidents can happen with anyone at any time. </p>
 			</div>
 
 			<div class="row my-5 justify-content-center">
