--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 			<div class="text-center">
 				<h2 style="color: #481449;">Avoid Any Penalties <i class="bi bi-emoji-sunglasses" style="color: #ac2bac;"></i></h2>
 
-				<p class="lead text-muted"> Sorry! But it's true, you cannot claim insurance if your car is not registered. Don't procrastinate permanent registration, incidents can happen with anyone at any time. </p>
+				<p class="lead text-muted"> Insurance cannot be claimed if your car is not registered. Do not procrastinate permanent registration, incidents can happen with anyone at any time. </p> 
 			</div>
 
 			<div class="row my-5 justify-content-center">
@@ -175,7 +175,7 @@
 						<img src="assets/fix_date.jpg" class="card-img-top" alt="Enter Details">
 						<div class="card-body text-center py-4">
 							<h4 class="card-title" style="color: #481449;">Fix the Registration date</h4>
-							<p class="lead card-subtitle">With easemyregistration.com there is no need to visit RTO multiple times or wait your turn in line. We guarantee you to get your registration done on the day you chose</p>
+							<p class="lead card-subtitle">With easemyregistration.com there is no need to visit RTO multiple times or wait your turn in line. We guarantee you to get your registration done on the day you choose</p>
 						</div>
 					</div>
 				</div>
