--- a/index.html
+++ b/index.html
@@ -35,6 +35,24 @@
 
 	</style>
 </head>
+	<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/621623e91ffac05b1d7b51fe/1fsj7oivg';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
+	
+	
+	
+	
+	
 <body>
 	<!-- Nav Bar -->
 	<nav class="navbar fixed-top bg-body navbar-expand-md navbar-light">
