--- a/index.html
+++ b/index.html
@@ -319,10 +319,10 @@ s0.parentNode.insertBefore(s1,s0);
 				<hr class="col-8 col-md-5 mb-5 bg-danger border-1 border-top border-danger">
 				<h5 class="text-center" style="color: #481449;"><i class="bi bi-telephone-fill" style="color: #ac2bac;"></i> Contacts</h5>
 				<div class="col-5 col-md-4 text-end">
-					<p class="lead">9652574047</p>
+					<p class="lead"></p>
 				</div>
 				<div class="col-5 col-md-4 text-start">
-					<p class="lead">8769252451</p>
+					<p class="lead">9515601706</p>
 				</div>
 			</div>
 
