--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ s0.parentNode.insertBefore(s1,s0);
 						<img src="assets/fix_date.jpg" class="card-img-top" alt="Enter Details">
 						<div class="card-body text-center py-4">
 							<h4 class="card-title" style="color: #481449;">Fix the Registration date</h4>
-							<p class="lead card-subtitle">With easemyregistration.com there is no need to visit RTO multiple times or wait your turn in line. We guarantee you to get your registration done on the day you choose</p>
+							<p class="lead card-subtitle">With easemyregistration there is no need to visit RTO multiple times or wait your turn in line. We guarantee you to get your registration done on the day you choose</p>
 						</div>
 					</div>
 				</div>
@@ -311,7 +311,7 @@ s0.parentNode.insertBefore(s1,s0);
 			<div class="row my-5 align-items-center justify-content-center">
 				<div class="col-11 col-md-8 text-center">
 					<h2 style="color: #481449;"><i class="bi bi-people-fill" style="color: #ac2bac;"></i> About Us</h2>
-					<p class="lead">EaseMyRegistration.com is owned and operated by Dream India, Inc. Please note: EaseMyRegistration.Com is not owned or operated by any government agency, and is not having any relation with Telangana’s RTO(Regional Transport Office). Also the consultancy we provide is strictly subjeced to each and every norm of RTO.</p>
+					<p class="lead">EaseMyRegistration.info is owned and operated by Dream India, Inc. Please note: EaseMyRegistration.info is not owned or operated by any government agency, and is not having any relation with Telangana’s RTO(Regional Transport Office). Also the consultancy we provide is strictly subjeced to each and every norm of RTO.</p>
 				</div>
 			</div>
 
@@ -340,7 +340,7 @@ s0.parentNode.insertBefore(s1,s0);
 			data:$("#quick_form").serializeArray(),
 			success: function(){
 				document.getElementById("quick_form").reset();
-				alert("Thank You for choosing EaseMyRegistration.Com for the permanent registration of your car. We will reach out to you soon.")
+				alert("Thank You for choosing EaseMyRegistration.info for the permanent registration of your car. We will reach out to you soon.")
 			},
 			error: function(){
 				alert("There was an error :(")
